# TIF3

./: .env
backend/: .dockerignore  .env  .env-example  .flake8  Dockerfile  README.md  app.db  curl  docker-compose.yml  farmeye.db  init_bd.py  mypy.ini  pyproject.toml  requirements.txt
backend/app/: config.py  init_db.py  main.py
backend/app/core/: database.py  settings.py
backend/app/models/: __init__.py  diagnosis.py  keras_model.h5  labels.txt  refresh_token.py  user.py
backend/app/routes/: auth.py  image.py  llm.py
backend/app/schemas/: auth.py  image.py
backend/app/services/: auth.py  diagnosis.py  image.py
backend/scripts/: check.sh
backend/tests/: conftest.py  test_auth.py  test_image.py
frontend/farmeye-client/: index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  vite.config.js
frontend/farmeye-client/src/: App.jsx  index.css  main.jsx
frontend/farmeye-client/src/components/: AnalyzeForm.jsx  BottomNav.jsx  HistoryList.jsx  ImagePicker.jsx  StatsCard.jsx  SymptomsDropdown.jsx
frontend/farmeye-client/src/components/dashboard/: AnalysisResult.jsx  CameraCapture.jsx  SymptomSelector.jsx
frontend/farmeye-client/src/components/layout/: Container.jsx
frontend/farmeye-client/src/components/ui/: Button.jsx  Input.jsx
frontend/farmeye-client/src/context/: AuthContext.jsx
frontend/farmeye-client/src/pages/: DashboardPage.jsx  HomeScreen.jsx  LoginPage.jsx  RegisterPage.jsx  WelcomePage.jsx
